# silicon-bench

./: .gitignore  LICENSE  README.md  bench.py  pyproject.toml  test_bench.py
.github/workflows/: ci.yml
