[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silicon-bench"
version = "0.1.0"
description = "AI inference benchmarks for Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Amado Alvarez Sueiras"}]
keywords = ["apple-silicon", "benchmark", "mlx", "coreml", "ai", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# No hard dependencies — all backends are optional
dependencies = []

[project.optional-dependencies]
mlx = ["mlx>=0.20", "mlx-lm>=0.20"]
ollama = ["ollama>=0.4"]
coreml = ["coremltools>=8.0", "sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
all = [
    "mlx>=0.20",
    "mlx-lm>=0.20",
    "ollama>=0.4",
    "coremltools>=8.0",
    "sentence-transformers>=3.0",
]

[project.scripts]
silicon-bench = "bench:main"

[project.urls]
Homepage = "https://github.com/amado-alvarez/silicon-bench"
Repository = "https://github.com/amado-alvarez/silicon-bench"
"Bug Tracker" = "https://github.com/amado-alvarez/silicon-bench/issues"
Discussions = "https://github.com/amado-alvarez/silicon-bench/discussions"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["bench.py"]
